# LawJudicialAgent

./: .gitignore  README.md  check_output.py  chunks_debug.txt  extract_laws.py  extract_text.py  extracted_laws.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  run_backend.bat  run_frontend.bat  setup.bat  test_output.txt  test_output_utf8.txt  test_processor.py  test_result.txt  verify_laws.py
app/: __init__.py  config.py  llm.py
app/agents/: evidence.py  trial.py  (+1 more)
civil_law_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: knowledge_graph.sqlite  metadata_registry.json  relation_registry.json
frontend/: package-lock.json  package.json
logs/: llm_trace_20260407_213908.jsonl  llm_trace_20260407_213932.jsonl  llm_trace_20260407_221446.jsonl  llm_trace_20260407_221446_conversation.json  llm_trace_20260407_221757.jsonl  llm_trace_20260407_223115.jsonl
scripts/: debug_cleaning.py  delete_data.py  ingest_legal_data.py  run_full_workflow_test.py  test_concurrency.py  test_embedding_batch.py  test_no_repeat_ask.py  test_parser_fix.py  test_processor.py  test_rag.py  test_workflow_regression.py  verify_kg.py  verify_slots.py  view_chunks.py
temp_uploads/: 上海农村商业银行股份有限公司浦东分行与上海浩泽净水科技发展有限公司、陕西浩泽环保科技发展有限公司金融借款合同纠纷一审...(FBMCLI.C.313694972).docx  乔建新与上海兴邦餐饮管理有限公司请求变更公司登记纠纷民事一审案件民事判决书(FBMCLI.C.326435807).docx  佛山市三水德祥物业管理有限公司与刘翠华、佛山市三水德保房地产发展有限公司公司决议撤销纠纷一案民事一审裁定书(FBMCLI.C.312323961).docx  关于外国投资者并购境内企业的规定.docx  原告罗田安与被告南京克莉丝汀食品有限公司决议效力确认纠纷一案的民事判决书(FBMCLI.C.407451668).docx  吴良好与如皋市金鼎置业有限公司等股东资格确认纠纷案(FBMCLI.C.534019156).docx  外商投资法司法解释.docx  民事诉讼法.docx  (+11 more)
(+44 files in other folders)
